<resources>
    <string name="app_name">Bedu Shop</string>
    <string name="homeTitle">Bedu Shop</string>
    <string name="emailText">Correo electrónico</string>
    <string name="passwordText">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Regístrate aquí</string>
    <string name="registerTitle">Regístrate</string>
    <string name="fullName">Nombre completo</string>
    <string name="phone">Telefono</string>
    <string name="product_list_fragment">Lista de Productos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart_fragment">Carrito de Compras</string>
    <string name="profile_fragment">Perfil de Usuario</string>
    <string name="title_product">Fjallraven - Foldsack No. 1 Backpack, Fits</string>
    <string name="price_product">$1,000</string>
    <string name="detail1_product">En 6 meses sin interes</string>
    <string name="detail2_product">Disponible en tu domicilio</string>
    <string name="detail3_product">Entrega mañana</string>
    <string name="button_cart_title">Agregar al Carrito</string>
    <string name="description">Descripción</string>
    <string name="description_detail">Lorem ipsum here va la descripcion</string>
    <string name="product_detail_transition_name">CardView</string>
    <string name="productTransitionName">product_transition</string>
    <string name="logout_text">Cerrar sesión</string>
    <string name="add_addres">Agregar dirección</string>
    <string name="actualLocation">Ubicacion actual</string>
    <string name="updateLocation">Actualizar</string>



</resources>