<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#172126"
    >

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="72dp"
        android:text="@string/registerTitle"
        android:textColor="@color/beduShop"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="50dp"
            android:width="250dp"
            android:drawableLeft="@drawable/profile"
            android:drawablePadding="12dp"
            android:hint="@string/fullName"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white">

        </EditText>
        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="20dp"
            android:width="250dp"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="12dp"
            android:hint="@string/emailText"
            android:inputType="textWebEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white">

        </EditText>

        <TextView
            android:id="@+id/emailError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="Por favor completar Correo Electronico"
            android:textColor="@color/red"
            android:visibility="gone" />
        <EditText
            android:id="@+id/Phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="20dp"
            android:width="250dp"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="12dp"
            android:hint="@string/phone"
            android:inputType="textPhonetic"
            android:textColor="@color/white"
            android:textColorHint="@color/white">

        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="20dp"
            android:width="250dp"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="12dp"
            android:hint="@string/passwordText"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white">

        </EditText>

        <TextView
            android:id="@+id/passwordError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="Por favor completar la contraseña"
            android:textColor="@color/red"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="48dp"
            android:backgroundTint="@color/beduShop"
            android:text="@string/registerTitle"></Button>

        <TextView
            android:id="@+id/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:text="@string/login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/loginSuccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:text="Inicio de Sesion Exitoso!"
            android:textColor="@color/green"
            android:visibility="gone" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>