<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/primaryBedu"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:scaleType="fitCenter"
        android:src="@drawable/bag"></ImageView>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/homeTitle"
        android:textColor="@color/secondaryBedu"
        android:textSize="40dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:orientation="vertical"
        android:padding="25dp">


        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/outlinedTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/emailText"
            app:startIconDrawable="@drawable/ic_profile"
            app:startIconTint="@color/white"
            app:boxStrokeColor="@drawable/input_color"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                />

        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:id="@+id/emailError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="Por favor completar Correo Electronico"
            android:textColor="@color/red"
            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/passwordText"
            android:layout_gravity="left"
            android:layout_marginTop="25dp"
            app:startIconDrawable="@drawable/lock"
            app:startIconTint="@color/white"
            app:boxStrokeColor="@drawable/input_color"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/passwordError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="Por favor completar la contraseña"
            android:textColor="@color/red"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="38dp"
            android:backgroundTint="@color/secondaryBedu"
            android:text="@string/login"></Button>

        <TextView
            android:id="@+id/Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:text="@string/register"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/loginSuccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:text="Inicio de Sesion Exitoso!"
            android:textColor="@color/green"
            android:visibility="gone" />

    </LinearLayout>
</LinearLayout>